add groups and online count users

--- a/resource/views/layouts/content.ejs
+++ b/resource/views/layouts/content.ejs
@@ -1,19 +1,19 @@
 <div class="content">
     <div class="contact-profile">
-        <img src="https://media-exp1.licdn.com/dms/image/C5603AQE3g9gHNfxGrQ/profile-displayphoto-shrink_200_200/0/1645507738281?e=1659571200&v=beta&t=wtwELdT1gp6ICp3UigC2EgutGAQgDP2sZKUx0mjCTwI"
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6Hb5xzFZJCTW4cMqmPwsgfw-gILUV7QevvQ&s"
             alt="" />
         <p>Erfan Yousefi</p>
         <div class="social-media">
-            <span id="onlinesCount"><strong>افراد آنلاین : </strong><span id="count">10</span></span>
+            <span id="onlinesCount"><strong>افراد آنلاین : </strong><span id="count"></span></span>
         </div>
     </div>
     <div id="roomName">
-        <h3>گروه پشتیبانی بوتواستارت </h3>
+        <h3></h3>
     </div>
     <div class="messages">
         <ul>
             <li class="sent">
-                <img src="https://media-exp1.licdn.com/dms/image/C5603AQE3g9gHNfxGrQ/profile-displayphoto-shrink_200_200/0/1645507738281?e=1659571200&v=beta&t=wtwELdT1gp6ICp3UigC2EgutGAQgDP2sZKUx0mjCTwI"
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6Hb5xzFZJCTW4cMqmPwsgfw-gILUV7QevvQ&s"
                     alt="" />
                 <p>salam dostan haleton chetore ? az course nodejs razi hastin?</p>
             </li>
