--- a/resource/views/layouts/sidepanel.ejs
+++ b/resource/views/layouts/sidepanel.ejs
@@ -2,20 +2,24 @@
     <div id="profile">
         <div class="wrap">
             <img id="profile-img"
-                src="https://www.nicepng.com/png/full/128-1284589_download-chat-icon-skype-group-logo.png"
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQZOMhp5JW1FpJQis_dsvZ4HPXRBNT5tZDOuQ&s"
                 class="online" alt="" />
-            <p>Socket.io chat</p>
-            <i class="fa fa-chevron-down expand-button" aria-hidden="true"></i>
+            <p>ra chat</p>
+            <!-- <i class="fa fa-chevron-down expand-button" aria-hidden="true"></i> -->
             <div id="status-options">
-                <ul id="namespaces"></ul>
+
             </div>
         </div>
     </div>
+    <ul id="namespaces" style="direction: rtl; cursor: pointer;">
+    </ul>
     <div id="search">
         <label for=""><i class="fa fa-search" aria-hidden="true"></i></label>
         <input type="text" placeholder="Search contacts..." />
     </div>
     <div id="contacts">
-        <ul></ul>
+        <ul>
+            
+        </ul>
     </div>
 </div>
